@@ -1,5 +1,5 @@
 
- OpenSSL 0.9.6f [engine] 8 August 2002
+ OpenSSL 0.9.6g [engine] 9 August 2002
 
  Copyright (c) 1998-2002 The OpenSSL Project
  Copyright (c) 1995-1998 Eric A. Young, Tim J. Hudson
