@@ -25,8 +25,8 @@
  * (Prior to 0.9.5a beta1, a different scheme was used: MMNNFFRBB for
  *  major minor fix final patch/beta)
  */
-#define OPENSSL_VERSION_NUMBER	0x0090606fL
-#define OPENSSL_VERSION_TEXT	"OpenSSL 0.9.6f [engine] 8 Aug 2002"
+#define OPENSSL_VERSION_NUMBER	0x0090607fL
+#define OPENSSL_VERSION_TEXT	"OpenSSL 0.9.6g [engine] 9 Aug 2002"
 #define OPENSSL_VERSION_PTEXT	" part of " OPENSSL_VERSION_TEXT
 
 
